Reduce rounding errors in hit testing on high-dpi

Previously we use ToCeiledPoint for the input of
InputTargetClient::FrameSinkIdAt(). The input is in DIP so the
ceiling caused too much error for blink hit testing which uses
css pixels which is in device pixels when use-zoom-for-dsf is enabled.
The error also accumulated across frame boundaries.

Now pass PointF to InputTargetClient::FrmeSinkIdAt(), and round it
(in blink pixels) when passing it to blink.

I discovered the issue when trying to land
https://chromium-review.googlesource.com/c/chromium/src/+/1271582
which changes the subpixel position of iframe contents.

Bug: 627683
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: If3b9d9ca2ee6fa553ac0274011456938b1a606d2
Reviewed-on: https://chromium-review.googlesource.com/c/1280312
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600234}
Former-commit-id: f02017ac12c8452a9f99e8086ffe8321e04c355a